tweaks to sidebar ui spacing and bug fix to price guide text appearing black

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ html, body {
 }
 
 .ui{
-  background: rgb(0,0,0);
+  background: rgb(0.5,0.5,0.5);
   background: rgba(0, 0, 0, 0.5);
   position: relative;
   width: 33vw;
@@ -105,17 +105,23 @@ select{
   width: 30vw;
 }
 
-a{
+a, #price{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  font-size: 1.8vw;
   color: white;
   margin-top: 0;
   margin-bottom: 0;
   padding: 0;
 }
 
+#price{
+  font-size: 1.2vw;
+}
+
+a{
+  font-size: 1.8vw;
+}
 
 #photobox{
   color: white;
